--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "snocykel",
-  "version": "0.0.0",
+  "name": "baxacykel",
+  "version": "1.0.0",
   "description": "[![Latest Stable Version](https://poser.pugx.org/laravel/framework/version.png)](https://packagist.org/packages/laravel/framework) [![Total Downloads](https://poser.pugx.org/laravel/framework/d/total.png)](https://packagist.org/packages/laravel/framework) [![Build Status](https://travis-ci.org/laravel/framework.png)](https://travis-ci.org/laravel/framework)",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://EukarYoter@bitbucket.org/EukarYoter/snocykel.git"
+    "url": "https://github.com/murum/baxacykel.git"
   },
   "author": "",
   "license": "BSD-2-Clause",
